--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,7 @@ html { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: 
 :root {
   --primary-color: #141518;
   --primary-light: #313234;
-  --secondary-color: #ff4d80;
+  --secondary-color: #ff634b;
 
   --text-color: #303030;
 
@@ -33,7 +33,7 @@ html { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: 
   --header-height: 65px;
 
   --border-settings: 2px solid #ededed;
-  --border-radius: 5px;
+  --border-radius: 4px;
 
   --expanded-transform: translate(-5px, -5px);
   --expanded-shadow: 5px 5px var(--secondary-color);
@@ -57,7 +57,7 @@ html {
 }
 
 body {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Nunito', sans-serif;
   font-weight: 400;
   font-style: normal;
 
@@ -87,6 +87,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Heading 1 */
 h1 {
+  font-weight: 800;
   font-size: 26px; font-size: 2.6rem;
   margin-bottom: var(--default-small-padding);
 }
@@ -146,6 +147,10 @@ ul, ol {
 
   transition: var(--default-transition);
   box-shadow: 0px 0px var(--secondary-color);
+}
+
+.logo > span:first-of-type {
+  margin-right: 2px;
 }
 
 .logo:hover {
@@ -237,7 +242,7 @@ section + section {
 ============================================================================= */
 .grid {
   display: grid;
-  gap: var(--default-padding);
+  gap: 8px;
 
   grid-template-rows: repeat(4, 1fr);
 }
@@ -245,14 +250,6 @@ section + section {
   .grid li {
     height: 250px;
     border-radius: var(--border-radius);
-
-    transition: var(--default-transition);
-    box-shadow: 0px 0px var(--secondary-color);
-  }
-
-  .grid li:hover, .grid li a:focus, .grid li a:active {
-    transform: var(--expanded-transform);
-    box-shadow: var(--expanded-shadow);
   }
 
   .grid li a {
