--- a/styles/style.css
+++ b/styles/style.css
@@ -16,13 +16,16 @@ html { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: 
 
 
 :root {
-  --primary-color: #141518;
-  --primary-light: #313234;
-  --secondary-color: #ff634b;
+  --primary-color: #000000;
 
-  --text-color: #303030;
+  --light-grey: #F4F4F4;
+  --light-text-color: #ACACAC;
 
   --white-color: #FFFFFF;
+  --red-color: #F54C4C;
+  --blue-color: #4C7BF5;
+  --yellow-color: #FFA825;
+  --green-color: #4DAA5C;
 
   --default-padding: 24px;
   --default-small-padding: 12px;
@@ -30,10 +33,11 @@ html { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: 
 
   --default-transition: all 250ms ease-in-out;
 
-  --header-height: 65px;
+  --header-height: 110px;
 
-  --border-settings: 2px solid #ededed;
-  --border-radius: 4px;
+  --border-settings: 3px solid #000000;
+  --border-settings-light: 3px solid #F4F4F4;
+  --border-radius: 5px;
 
   --expanded-transform: translate(-5px, -5px);
   --expanded-shadow: 5px 5px var(--secondary-color);
@@ -57,7 +61,7 @@ html {
 }
 
 body {
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: 400;
   font-style: normal;
 
@@ -87,9 +91,9 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Heading 1 */
 h1 {
-  font-weight: 800;
+  font-weight: 700;
   font-size: 26px; font-size: 2.6rem;
-  margin-bottom: var(--default-small-padding);
+  margin-bottom: 30px;
 }
 
 /* Heading 2 */
@@ -99,7 +103,15 @@ h2 {
 
 /* Heading 3 */
 h3 {
-  font-size: 18px; font-size: 1.8rem;
+  font-size: 16px; font-size: 1.6rem;
+}
+
+h3 + p {
+  margin-top: 5px;
+}
+
+p { 
+  color: var(--light-text-color);
 }
 
 p + p {
@@ -129,34 +141,188 @@ ul, ol {
 }
 
 /* =============================================================================
+  #UTILS
+============================================================================= */
+.box-shadow {
+  position: relative;
+}
+
+.box-shadow > * {
+  position: relative;
+  z-index: 20;
+}
+
+.box-shadow::before {
+  content: "";
+
+  position: absolute;
+
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: transparent;
+  border: var(--border-settings);
+  border-radius: var(--border-radius);
+  z-index: 10;
+}
+
+.box-shadow::after {
+  content: "";
+
+  position: absolute;
+
+  top: 7px;
+  left: 7px;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: var(--white-color);
+  border: var(--border-settings);
+  border-radius: var(--border-radius);
+
+  transition: var(--default-transition);
+
+  z-index: -5;
+}
+
+.highlighter {
+  position: relative;
+  display: inline-block;
+}
+
+.highlighter::before {
+  content: "";
+
+  position: absolute;
+
+  left: 0;
+  right: 0;
+  bottom: 2px;
+
+  width: 100%;
+  height: 10px;
+
+  background-color: var(--yellow-color);
+  z-index: -5;
+}
+/* =============================================================================
   #LOGO
 ============================================================================= */
 .logo {
+  position: relative;
+
   display: inline-block;
+
   line-height: 1.1;
-  font-weight: 700;
-  font-size: 18px;
+  font-weight: 600;
+  font-size: 20px; font-size: 2.0rem;
   color: var(--white-color);
 
-  padding: 10px;
-
-  background-color: var(--primary-color);
-
   border-radius: var(--border-radius);
+
   cursor: pointer;
 
   transition: var(--default-transition);
-  box-shadow: 0px 0px var(--secondary-color);
 }
 
-.logo > span:first-of-type {
-  margin-right: 2px;
-}
+  .logo span {
+    position: relative;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 50px;
+    height: 50px;
+
+    border-radius: var(--border-radius);
+    z-index: 10;
+  }
+
+  .logo::before {
+    background-color: var(--red-color);
+  }
 
 .logo:hover {
-  transform: var(--expanded-transform);
-  box-shadow: var(--expanded-shadow);
+  transform: translate(7px, 7px);
 }
+
+.logo:hover::after {
+  top: 0;
+  left: 0;
+}
+
+/* =============================================================================
+  #HAMBURGER ICON
+============================================================================= */
+  .hamburger-icon {
+    position: absolute;
+
+    visibility: hidden;
+    top: 0;
+    right: 0;
+    z-index: 110;
+  }
+
+  .hamburger-icon + label {
+    position: absolute;
+
+    right: var(--default-padding);
+    top: 50%;
+    transform: translateY(-50%);
+
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    cursor: pointer;
+
+    z-index: 110;
+  }
+
+    .hamburger-icon + label > span {
+      display: block;
+
+      width: 30px;
+      height: 4px;
+      
+      margin: 3px 0;
+
+      background-color: var(--primary-color);
+      border-radius: 3px;
+
+      transition: var(--default-transition);
+    }
+
+    .hamburger-icon + label > span:first-of-type {
+      background-color: var(--red-color);
+    }
+    .hamburger-icon + label > span:nth-of-type(2) {
+      background-color: var(--yellow-color);
+    }
+    .hamburger-icon + label > span:last-of-type {
+      background-color: var(--blue-color);
+    }
+
+    .hamburger-icon:checked + label > span:first-of-type {
+      -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+      transform: rotate(-45deg) translate(-8px, 7px);
+    }
+
+    .hamburger-icon:checked + label > span:nth-of-type(2) {
+      opacity: 0;
+    }
+
+    .hamburger-icon:checked + label > span:last-of-type {
+      -webkit-transform: rotate(45deg) translate(-8px, -8px);
+      transform: rotate(45deg) translate(-7px, -6px);
+    }
+
+
 /* =============================================================================
   #HEADER
 ============================================================================= */
@@ -165,64 +331,121 @@ header {
 
   display: flex;
   align-items: center;
-  flex-direction: column;
+  flex-direction: row;
 
   top: 0;
   left: 0;
   right: 0;
   
-  margin: 0 var(--default-padding);
+  padding: 0 var(--default-padding);
   height: var(--header-height);
 
   background-color: var(--white-color);
-  border-bottom: var(--border-settings);
+  border-bottom: var(--border-settings-light);
   z-index: 100;
 }
 
-  header div {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-
-    width: 100%;
-  }
-
   nav {
-    position: relative;
+    position: fixed;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    transform: translateX(100%);
+
+    padding: 0 var(--default-big-padding);
+
+    background-color: var(--white-color);
+    transition: var(--default-transition);
+    z-index: 100;
   }
 
-  header div,
-  nav, 
-  nav ul, 
-  nav ul li, 
-  nav ul li a {
-    height: 100%;
+  .hamburger-icon:checked ~ nav {
+    transform: translateX(0);
   }
 
     nav ul {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       align-items: center;
+
+      width: 100%;
     }
 
     nav ul li {
+      text-align: center;
+      font-size: 20px; font-size: 2.0rem;
+
       transition: var(--default-transition);
     }
 
-    nav ul li:hover {
-      transform: scale(1.1);
+    nav ul li + li {
+      margin-top: var(--default-padding);
     }
 
-        nav ul li a {
-          display: flex;
-          align-items: center;
+      nav ul li a {
+        display: inline-block;
 
-          padding: 0 var(--default-small-padding);
+        padding: 6px 12px;
 
-          font-weight: 700;
-          color: var(--primary-color);
-        }
+        font-weight: 600;
+        color: var(--primary-color);
+        transition: var(--default-transition);
+      }
+
+      nav ul li a.box-shadow::before {
+        background-color: var(--white-color);
+      }
+
+      nav ul li a.box-shadow::after {
+        top: 0;
+        left: 0;
+      }
+
+      nav ul li a.active {
+        color: var(--white-color);
+      }
+
+      nav ul li a.active.box-shadow::before {
+        background-color: var(--blue-color);
+      }
+
+      nav ul li:hover a.box-shadow::after {
+        top: 7px;
+        left: 7px;
+      }
+
+      nav ul li:nth-of-type(2):hover a.box-shadow::after {
+        background-color: var(--red-color);
+      }
+
+      nav ul li:nth-of-type(3):hover a.box-shadow::after {
+        background-color: var(--yellow-color);
+      }
+
+      nav ul li:hover a.box-shadow {
+        transform: translate(-7px, -7px);
+      }
+
+      nav ul li:hover a.active.box-shadow::after {
+        top: 0;
+        left: 0;
+      }
+
+      nav ul li:hover a.active.box-shadow {
+        transform: translate(7px, 7px);
+      }
+
+      nav ul li a.active.box-shadow::after {
+        top: 7px;
+        left: 7px;
+      }
 /* =============================================================================
   #MAIN
 ============================================================================= */
@@ -234,7 +457,7 @@ section + section {
   padding-top: 30px;
   margin-top: 30px;
 
-  border-top: var(--border-settings);
+  border-top: var(--border-settings-light);
 }
 
 /* =============================================================================
@@ -242,23 +465,41 @@ section + section {
 ============================================================================= */
 .grid {
   display: grid;
-  gap: 8px;
+  gap: 20px;
 
   grid-template-rows: repeat(4, 1fr);
 }
 
   .grid li {
-    height: 250px;
     border-radius: var(--border-radius);
   }
 
   .grid li a {
     border-radius: var(--border-radius);
+    transition: var(--default-transition);
+  }
+
+  /* border should be above entire figure */
+  .grid li a.box-shadow::before {
+    z-index: 30;
+  }
+
+  .grid li a.box-shadow::after {
+    top: 0;
+    left: 0;
+  }
+
+  .grid li:hover a.box-shadow {
+    transform: translate(-7px, -7px);
+  }
+
+  .grid li:hover a.box-shadow::after {
+    top: 7px;
+    left: 7px;
   }
 
     .grid li a, .grid li figure, .grid li figure > picture {
       display: block;
-      height: 100%;
     }
 
       .grid li figure {
@@ -267,6 +508,10 @@ section + section {
 
         .grid li figure > picture, .grid li figure > picture img {
           border-radius: var(--border-radius);
+        }
+
+        .grid li figure > picture {
+          height: 250px;
         }
 
           .grid li figure > picture img {
@@ -278,38 +523,181 @@ section + section {
           }
 
         .grid li figure > figcaption {
-          position: absolute;
-
           display: flex;
           align-items: center;
-          justify-content: center;
+          flex-direction: row;
+          justify-content: space-between;
 
-          text-align: center;
-
-          top: 0;
-          left: 0;
-          right: 0;
-          bottom: 0;
+          padding: 16px;
 
           color: var(--white-color);
-          font-weight: 600;
-          font-size: 18px; font-size: 1.8rem;
 
-          background-color: var(--primary-color);
-          border-radius: var(--border-radius);
+          border-top: var(--border-settings);
+          background-color: var(--red-color);
 
-          opacity: 0;
-
-          transition: var(--default-transition);
+          border-bottom-right-radius: var(--border-radius);
+          border-bottom-left-radius: var(--border-radius);
         }
 
-        .grid li:hover figure > figcaption, .grid li a:focus figure > figcaption, .grid li a:active figure > figcaption {
-          opacity: .85;
+        .grid li:nth-of-type(2) figure > figcaption {
+          background-color: var(--yellow-color);
         }
 
-        .grid li a:focus, .grid li a:active {
-          outline: none;
+        .grid li:nth-of-type(3) figure > figcaption {
+          background-color: var(--blue-color);
         }
+
+        .grid li:last-of-type figure > figcaption {
+          background-color: var(--green-color);
+        }
+
+          .grid li figure > figcaption > div {
+            padding-right: var(--default-padding);
+          }
+
+            .grid li figure > figcaption > div p {
+              color: var(--white-color);
+              font-size: 14px; font-size: 1.4rem;
+            }
+/* =============================================================================
+  #TIMELINE
+============================================================================= */
+.timeline {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+  .timeline li {
+    position: relative;
+    width: 100%;
+
+    padding-left: 24px;
+  }
+
+  /* black line */
+  .timeline li::before {
+    content: "";
+
+    position: absolute;
+
+    top: 20px;
+    left: 3px;
+    bottom: 0;
+
+    height: calc(100% + (var(--default-padding) + 14px));
+    width: 3px;
+
+    background-color: var(--primary-color);
+  }
+
+  .timeline li:first-of-type::before {
+    top: 20px;
+    height: 100%;
+  }
+
+  .timeline li:last-of-type::before {
+    height: auto;
+    top: auto;
+  }
+  
+  .timeline li + li {
+    padding-top: calc(var(--default-padding) + 7px);
+  }
+
+    /* date tag */
+    .timeline li > div {
+      position: relative;
+      display: inline-block;
+
+      padding: 8px 14px;
+      margin-bottom: 12px;
+
+      border: var(--border-settings);
+      border-radius: 30px;
+
+      background-color: var(--white-color);
+    }
+
+    /* little orb */
+    .timeline li > div::before {
+      content: "";
+
+      position: absolute;
+
+      top: 50%;
+      left: -27px;
+
+      transform: translateY(-50%);
+
+      width: 10px;
+      height: 10px;
+
+      border-radius: 50%;
+
+      background-color: var(--primary-color);
+    }
+
+    .timeline li:first-of-type > a.box-shadow::after, 
+    .timeline li:first-of-type > div::before {
+      background-color: var(--red-color);
+    }
+
+    .timeline li:nth-of-type(2) > a.box-shadow::after,
+    .timeline li:nth-of-type(2) > div::before {
+      background-color: var(--yellow-color);
+    }
+
+    .timeline li:nth-of-type(3) > a.box-shadow::after,
+    .timeline li:nth-of-type(3) > div::before {
+      background-color: var(--blue-color);
+    }
+
+    .timeline li:last-of-type > a.box-shadow::after,
+    .timeline li:last-of-type > div::before {
+      background-color: var(--green-color);
+    }
+
+      .timeline li > div p {
+        color: var(--primary-color);
+        font-weight: 500;
+      }
+
+    .timeline li > a {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      padding: 16px;
+      border-radius: var(--border-radius);
+      transition: var(--default-transition);
+    }
+
+    .timeline li > a.box-shadow::before {
+      background-color: var(--white-color);
+    }
+
+    .timeline li > a.box-shadow:hover {
+      transform: translate(7px, 7px);
+    }
+
+    .timeline li > a.box-shadow:hover::after {
+      top: 0;
+      left: 0;
+    }
+
+      .timeline li > a div {
+        padding-right: 20px;
+        color: var(--primary-color);
+      }
+
+      .timeline li > a div > p {
+        display: none;
+
+        font-size: 14px; font-size: 1.4rem;
+        color: var(--primary-color);
+        margin-top: 4px;
+      }
 /* =============================================================================
   #BUTTONS
 ============================================================================= */
@@ -348,11 +736,33 @@ button, .btn {
   margin-top: var(--default-padding);
 }
 
+.btn--arrow {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  min-width: 35px;
+  width: 35px;
+  height: 35px; 
+
+  background-color: var(--white-color);
+  border-radius: 50%;
+
+  border: var(--border-settings);
+}
+
+  .btn--arrow img {
+    height: 12px;
+    width: auto;
+
+    transform: rotate(-90deg);
+  }
+
 /* =============================================================================
   #FOOTER
 ============================================================================= */
 footer {
-  border-top: var(--border-settings);
+  border-top: var(--border-settings-light);
   padding: var(--default-padding);
 
   text-align: center;
@@ -405,32 +815,3 @@ footer {
       margin: calc(40px + var(--header-height)) 0 40px 0;
   }
 }
-
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --border-settings: 2px solid #313234;
-  }
-
-  body {
-    color: var(--white-color);
-    background-color: var(--primary-color);
-  }
-
-    header {
-      background-color: var(--primary-color);
-    }
-
-      header ul li a {
-        color: var(--white-color);
-      }
-
-    .logo {
-      color: var(--primary-color);
-      background-color: var(--white-color);
-    }
-
-    button, .btn {
-      background-color: var(--white-color);
-      color: var(--primary-color);
-    }
-} */
