--- a/styles/style.css
+++ b/styles/style.css
@@ -58,6 +58,8 @@ html {
 
   font-size: 16px;
   font-size: 62.5%;
+  scroll-behavior: smooth;
+  scroll-padding: var(--header-height);
 }
 
 body {
