--- a/styles/style.css
+++ b/styles/style.css
@@ -209,6 +209,12 @@ ul, ol {
   background-color: var(--yellow-color);
   z-index: -5;
 }
+
+.gif {
+  width: 50%;
+  display: block;
+  margin: 0 auto;
+}
 /* =============================================================================
   #LOGO
 ============================================================================= */
