--- a/styles/style.css
+++ b/styles/style.css
@@ -913,6 +913,10 @@ footer {
       transition: none;
     }
 
+    nav.close-nav {
+      transform: none!important;
+    }
+
       nav ul {
         flex-direction: row;
         width: auto;
