changed color text

--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@ html { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: 
   --primary-color: #000000;
 
   --light-grey: #F4F4F4;
-  --light-text-color: #ACACAC;
+  --light-text-color: #323436;
 
   --white-color: #FFFFFF;
   --red-color: #F54C4C;
